<resources>
    <string name="app_name">Dictionary</string>
    <string name="enter_the_word">Enter the word</string>
    <string name="search">Search</string>
    <string name="dictionary_results">Dictionary Results</string>
    <string name="definition">Definition</string>
    <string name="example">Example</string>
    <string name="synonyms">Synonyms</string>
    <string name="speechtotextbutton">speechToTextButton</string>
</resources>