<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    android:layout_marginVertical="200dp"
    android:elevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/cardViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/definition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/cardViewLayout"
            app:layout_constraintStart_toStartOf="@+id/cardViewLayout"
            app:layout_constraintTop_toBottomOf="@+id/definitionText" />

        <TextView
            android:id="@+id/example"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/cardViewLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardViewLayout"
            app:layout_constraintTop_toBottomOf="@+id/exampleText" />

        <TextView
            android:id="@+id/synonyms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/cardViewLayout"
            app:layout_constraintStart_toStartOf="@+id/cardViewLayout"
            app:layout_constraintTop_toBottomOf="@id/synonymsText" />

        <TextView
            android:id="@+id/definitionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/definition"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="@+id/cardViewLayout"
            app:layout_constraintTop_toTopOf="@+id/cardViewLayout" />

        <TextView
            android:id="@+id/exampleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/example"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cardViewLayout"
            app:layout_constraintTop_toBottomOf="@id/definition" />

        <TextView
            android:id="@+id/synonymsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/synonyms"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cardViewLayout"
            app:layout_constraintTop_toBottomOf="@id/example" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>


